Добавил сервис для управления транзакциями с методом добавления транзакции, написал контроллер для пользователя

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.application.name=finances
-
+# DB
 spring.datasource.url=${DB_NAME}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
+# JPA
 spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.show_sql=false
