--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,4 @@ spring.datasource.password=${DB_PASSWORD}
 # JPA
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.show_sql=false
-server.address=192.168.1.131
+server.address=${SERVER_NAME}
