--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,8 @@ spring.datasource.password=${DB_PASSWORD}
 # JPA
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.show_sql=false
-server.address=${SERVER_NAME}
+# thymeleaf
+spring.thymeleaf.cache=true
+spring.thymeleaf.enabled=true
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
